--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.16.0"
 python-decouple = "^3.8"
 dj-database-url = "^2.3.0"
 rich = "^14.0.0"
+psycopg = {extras = ["binary"], version = "^3.2.6"}
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
