--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dj-database-url = "^2.3.0"
 rich = "^14.0.0"
 requests = "^2.32.3"
 psycopg = {extras = ["binary"], version = "^3.2.7"}
+django-debug-toolbar = "^5.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
