--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ rich = "^14.0.0"
 requests = "^2.32.3"
 psycopg = {extras = ["binary"], version = "^3.2.7"}
 django-debug-toolbar = "^5.2.0"
+djangorestframework-simplejwt = "^5.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
