--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ requests = "^2.32.3"
 psycopg = {extras = ["binary"], version = "^3.2.7"}
 django-debug-toolbar = "^5.2.0"
 djangorestframework-simplejwt = "^5.5.0"
+djoser = "^2.3.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
