--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ django-debug-toolbar = "^5.2.0"
 djangorestframework-simplejwt = "^5.5.0"
 djoser = "^2.3.1"
 django-filter = "^25.1"
+django-silk = "^5.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
